Added to launch script: --add-opens java.base/java.util=ALL-UNNAMED